--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -104,3 +104,14 @@ en:
     carbonads_through_trust_level: "Show your ads to users based on trust levels. Users with trust level higher than this value will not see ads."
     carbonads_topic_list_top_enabled: "Show an ad above the topic list"
     carbonads_above_post_stream_enabled: "Show an ad above the post stream"
+
+    community_desktop_leaderboard_a: "Community_Desktop_Leaderboard_A"
+    community_desktop_leaderboard_b: "Community_Desktop_Leaderboard_B"
+    community_desktop_leaderboard_c: "Community_Desktop_Leaderboard_C"
+    community_desktop_leaderboard_d: "Community_Desktop_Leaderboard_D"
+    community_mobile_300x250_a: "Community_Mobile_300x250_A"
+    community_mobile_300x250_b: "Community_Mobile_300x250_B"
+    community_mobile_300x250_c: "Community_Mobile_300x250_C"
+    community_mobile_300x250_d: "Community_Mobile_300x250_D"
+    community_mobile_320x50_a: "Community_Mobile_320x50_A"
+    community_mobile_320x50_b: "Community_Mobile_320x50_B"
