--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -105,13 +105,12 @@ en:
     carbonads_topic_list_top_enabled: "Show an ad above the topic list"
     carbonads_above_post_stream_enabled: "Show an ad above the post stream"
 
-    community_desktop_leaderboard_a: "Community_Desktop_Leaderboard_A"
-    community_desktop_leaderboard_b: "Community_Desktop_Leaderboard_B"
-    community_desktop_leaderboard_c: "Community_Desktop_Leaderboard_C"
-    community_desktop_leaderboard_d: "Community_Desktop_Leaderboard_D"
-    community_mobile_300x250_a: "Community_Mobile_300x250_A"
-    community_mobile_300x250_b: "Community_Mobile_300x250_B"
-    community_mobile_300x250_c: "Community_Mobile_300x250_C"
-    community_mobile_300x250_d: "Community_Mobile_300x250_D"
-    community_mobile_320x50_a: "Community_Mobile_320x50_A"
-    community_mobile_320x50_b: "Community_Mobile_320x50_B"
+    community_topic_list_top_code: "Topic List Top"
+    community_post_bottom_code: "Topic Bottom"
+    community_topic_above_post_stream_code: "Topic Top"
+    community_topic_above_suggested_code: "Topic Footer"
+    community_mobile_topic_list_top_code: "Topic List Mobile"
+    community_mobile_post_bottom_code: "Topic Bottom Mobile"
+    community_mobile_topic_above_post_stream_code: "Topic Top Mobile"
+    community_mobile_topic_above_suggested_code: "Topic Footer Mobile"
+    community_trust: "Trust Level and above to not display ads to"
