--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -105,12 +105,12 @@ en:
     carbonads_topic_list_top_enabled: "Show an ad above the topic list"
     carbonads_above_post_stream_enabled: "Show an ad above the post stream"
 
-    community_topic_list_top_code: "Topic List Top"
-    community_post_bottom_code: "Topic Bottom"
-    community_topic_above_post_stream_code: "Topic Top"
-    community_topic_above_suggested_code: "Topic Footer"
-    community_mobile_topic_list_top_code: "Topic List Mobile"
-    community_mobile_post_bottom_code: "Topic Bottom Mobile"
-    community_mobile_topic_above_post_stream_code: "Topic Top Mobile"
-    community_mobile_topic_above_suggested_code: "Topic Footer Mobile"
-    community_trust: "Trust Level and above to not display ads to"
+#    community_topic_list_top_code: "Topic List Top"
+#    community_post_bottom_code: "Topic Bottom"
+#    community_topic_above_post_stream_code: "Topic Top"
+#    community_topic_above_suggested_code: "Topic Footer"
+#    community_mobile_topic_list_top_code: "Topic List Mobile"
+#    community_mobile_post_bottom_code: "Topic Bottom Mobile"
+#    community_mobile_topic_above_post_stream_code: "Topic Top Mobile"
+#    community_mobile_topic_above_suggested_code: "Topic Footer Mobile"
+#    community_trust: "Trust Level and above to not display ads to"
